fix(chat): improve emoji dropdown on mobile

--- a/src/app/group/group.component.scss
+++ b/src/app/group/group.component.scss
@@ -49,6 +49,6 @@ md-tab-group {
 }
 
 .emoji-list {
-  width: 280px;
+  width: 230px;
 }
 
